kubernetes/manifests/services/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripinsights-poi-deploy
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripinsights-poi-app
  template:
    metadata:
      labels:
        app: tripinsights-poi-app
    spec:
      containers:
      - name: poi
        image: registryftf5727.azurecr.io/poi:1.0
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: poi-service
  namespace: api
spec:
  selector:
    app: tripinsights-poi-app
  ports:
  - port: 80
