kubernetes/manifests/services/trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripinsights-trips-deploy
  namespace: api    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripinsights-trips-app
  template:
    metadata:
      labels:
        app: tripinsights-trips-app
    spec:
      containers:
      - name: trips
        image: registryftf5727.azurecr.io/trips:1.0
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: trips-service
  namespace: api
spec:
  selector:
    app: tripinsights-trips-app
  type: LoadBalancer
  ports:
  - port: 80
