kubernetes/manifests/services/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripinsights-user-deploy
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripinsights-user-app
  template:
    metadata:
      labels:
        app: tripinsights-user-app
    spec:
      containers:
      - name: user
        image: registryftf5727.azurecr.io/user-java:1.0
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: api
spec:
  selector:
    app: tripinsights-user-app
  ports:
  - port: 80
