kubernetes/manifests/services/userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripinsights-userprofile-deploy
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripinsights-userprofile-app
  template:
    metadata:
      labels:
        app: tripinsights-userprofile-app
    spec:
      containers:
      - name: userprofile
        image: registryftf5727.azurecr.io/userprofile:1.0
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: userprofile-service
  namespace: api
spec:
  selector:
    app: tripinsights-userprofile-app
  ports:
  - port: 80
